[package]
name = "pwdeck"
version = "0.1.0"
authors = ["Protoshark <protoshark@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.8"
scrypt = { version = "0.6", default-features = false }
clap = { version = "2.33.3", features = ["color", "vec_map"], default-features = false }
rpassword = "5.0"
nanoid = "0.3.0"
byteorder = "1.4"
